feat: дописаны методы создания и удаления файла, оттестированы. Накидал сохранение в созданный файл